# GleamHouse

./: .gitignore  CMakeLists.txt  README.md
dep/Pekan/src/Renderer2D/: Transformable2D.cpp  Transformable2D.h
dep/Pekan/src/Renderer2D/Shaders/: 2D_Batch_1DTexture_FragmentShader.glsl  2D_Batch_FragmentShader.glsl
dep/Pekan/src/Renderer2D/Shapes/: CircleShape.cpp  CircleShapeStatic_impl.h  LineShape.cpp  PolygonShape.cpp  RectangleShape.cpp  Shape.h  TriangleShape.cpp
dep/Pekan/src/Renderer2D/Sprite/: Sprite.cpp  Sprite.h
notes/: dev_notes_00.txt  dev_plan.txt  todo.txt
src/: BoundingBox.cpp  BoundingBox.h  BoundingCircle.cpp  BoundingCircle.h  FinishedLevel_Scene.cpp  FinishedLevel_Scene.h  Floor.cpp  Floor.h  GleamHouse_Application.cpp  GleamHouse_Application.h  GleamHouse_GUIWindow.cpp  GleamHouse_GUIWindow.h  GleamHouse_Scene.cpp  GleamHouse_Scene.h  LightProperties.h  Player.cpp  Player.h  Torch.cpp  Torch.h  Wall.cpp  Wall.h  main.cpp
src/shaders/: FinishedLevel_FragmentShader.glsl  FinishedLevel_VertexShader.glsl  PostProcessingShader.glsl
